@@ -44,6 +44,10 @@ Added CHOLMOD_factorization.rcond()
 
 mrcal.worst_direction_stdev() works with NxN arrays
 
+mrcal.ref_calibration_object has optimization_inputs argument
+This provides a convenient shorthand to get the object used in a particular
+calibration
+
 * Migration notes 2.3 -> 3.0
 
 commit 76248fce8655fba0aec1175157cbe8f8da055b7a
